# doombox

./: .gitignore  Cargo.toml  Makefile  README.md  boot.asm  build.rs  build.sh  flake.nix  grub.cfg  linker.ld  rust-overlay.nix  shell.nix
.cargo/: config.toml
src/: doom.rs  doom_engine.rs  gdt.rs  idt.rs  main.rs  memory.rs  serial.rs  vga.rs
